--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stanley - Bootstrap Freelancer Template</title>
+  <title>Johnny - Engineer - Portfolio</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -42,7 +42,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">STANLEY</a>
+        <a class="navbar-brand" href="index.html">Johnny</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -63,8 +63,8 @@
         <div class="col-lg-8 col-lg-offset-2 centered">
           <img src="img/user.png" alt="Stanley">
           <h1>Hi, I am Johnny!</h1>
-          <p>Hello everybody. I'm Johnny, a free Engineer. A really simple theme for those wanting to showcase their work with a cute & clean style.</p>
-          <p>Please, consider to register to <a href="#">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
+          <p>フリーのWebエンジニアとして働いております。現在Python機械学習を学んでおります。</p>
+          <p>長年インフラエンジニアをしてきました。</p>
 
         </div>
         <!-- /col-lg-8 -->
