--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stanley - Bootstrap Freelancer Template</title>
+  <title>Johnny - Engineer - Portfolio</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -41,14 +41,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="index.html">STANLEY</a>
+        <a class="navbar-brand" href="index.html">Johnny</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="work.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <!-- <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li> -->
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -61,9 +61,16 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
           <img src="img/user.png" alt="Stanley">
-          <h1>About Stanley!</h1>
-          <p>Hello everybody. I'm Stanley, a free handsome bootstrap theme coded by BlackTie.co. A really simple theme for those wanting to showcase their work with a cute & clean style.</p>
-          <p>Please, consider to register to <a href="http://eepurl.com/IcgkX">our newsletter</a> to be updated with our latest themes and freebies. Like always, you can use this theme in any project freely. Share it with your friends.</p>
+          <h1>About Johnny!</h1>
+          <p>ご覧いただきありがとうございます。初めましてITエンジニアのJohnnyです。
+このサイトはエンジニアの僕が自分の手で作成したポートフォリオ作品をまとめています。
+
+名古屋→東京→上海→香港→大阪と各地を転々と、7年間にわたり、IT業界で主にサーバ、
+ネットワークの構築運用業務に携わり、そしてWeb制作のフリーランスをしながら自分のスキルを積み上げていきました。
+
+ＡＩと機械学習及びデータサイエンスが、様々な分野で注目されており、今後その需要が高まると考えます。そこで、Python及び機械学習を学んでおります。
+
+スキルがあれば働く場所や時間にとらわれずに働くことができるのがWeb業界・ITに従事する人たちのメリットだと思います。</p>
 
         </div>
         <!-- /col-lg-8 -->
@@ -77,7 +84,7 @@
 
   <!-- +++++ Information Section +++++ -->
 
-  <div class="container pt">
+  <!-- <div class="container pt">
     <div class="row mt centered">
       <div class="col-lg-3">
         <span class="glyphicon glyphicon-book"></span>
@@ -98,33 +105,41 @@
         <span class="glyphicon glyphicon-globe"></span>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       </div>
-    </div>
+    </div> -->
     <!-- /row -->
 
     <div class="row mt">
-      <div class="col-lg-6">
+      <!-- <div class="col-lg-6">
         <h4>THE THINKING</h4>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
           up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
-      </div>
+      </div> -->
       <!-- /colg-lg-6 -->
 
       <div class="col-lg-6">
-        <h4>THE SKILLS</h4> Wordpress
+        <h4>THE SKILLS</h4>
+        Server(Windows, Linux)
         <div class="progress">
-          <div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+          <div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
             <span class="sr-only">60% Complete</span>
           </div>
         </div>
 
-        Photoshop
+        Network(Cisco, Jupiter)
         <div class="progress">
-          <div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+          <div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            <span class="sr-only">60% Complete</span>
+          </div>
+        </div>
+
+        Python + MachineLearning
+        <div class="progress">
+          <div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
             <span class="sr-only">80% Complete</span>
           </div>
         </div>
 
-        HTML + CSS
+        HTML + CSS + Wordpress
         <div class="progress">
           <div class="progress-bar progress-bar-theme" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
             <span class="sr-only">95% Complete</span>
@@ -146,7 +161,7 @@
         <div class="col-lg-4">
           <h4>My Bunker</h4>
           <p>
-            Some Address 987,<br/> +34 9054 5455, <br/> Madrid, Spain.
+            Some Address 987,<br/> +34 9054 5455, <br/> Osaka, Japan.
           </p>
         </div>
         <!-- /col-lg-4 -->
@@ -154,7 +169,7 @@
         <div class="col-lg-4">
           <h4>My Links</h4>
           <p>
-            <a href="#">Dribbble</a><br/>
+            <!-- <a href="#">Dribbble</a><br/> -->
             <a href="#">Twitter</a><br/>
             <a href="#">Facebook</a>
           </p>
