--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Stanley - Bootstrap Freelancer Template</title>
+  <title>Johnny - Engineer - Portfolio</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -49,7 +49,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="work.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>CONTACT ME</h3>
         <hr>
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+<a href="mailto:peasant88@gmail.com">メールはこちらへ</a>
       </div>
     </div>
     <div class="row mt">
@@ -96,6 +96,7 @@
 
             <div class="form-send">
               <button type="submit" class="btn btn-large">Send Message</button>
+
             </div>
 
           </form>
@@ -113,7 +114,7 @@
         <div class="col-lg-4">
           <h4>My Bunker</h4>
           <p>
-            Some Address 987,<br/> +34 9054 5455, <br/> Madrid, Spain.
+            Some Address 987,<br/> Osaka, Japan.
           </p>
         </div>
         <!-- /col-lg-4 -->
