--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="work.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <!-- <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li> -->
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -81,30 +81,30 @@
   <div class="container pt">
     <div class="row mt centered">
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port01.jpg" alt="" /></a>
-        <p>APE</p>
+        <a href="https://johnny-fblog.herokuapp.com"><img class="img-responsive" src="img/portfolio/port01.jpg" alt="" /></a>
+        <p>マイクロブログ</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port02.jpg" alt="" /></a>
-        <p>RAIDERS</p>
+        <a href="https://sample-goto.herokuapp.com/"><img class="img-responsive" src="img/portfolio/port02.jpg" alt="" /></a>
+        <p>Webスクレイピング</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
         <p>VIKINGS</p>
       </div>
     </div>
     <!-- /row -->
     <div class="row mt centered">
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port04.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="img/portfolio/port04.jpg" alt="" /></a>
         <p>YODA</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port05.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="img/portfolio/port05.jpg" alt="" /></a>
         <p>EMPERORS</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port06.jpg" alt="" /></a>
+        <a href="#"><img class="img-responsive" src="img/portfolio/port06.jpg" alt="" /></a>
         <p>CHIEFS</p>
       </div>
     </div>
@@ -121,7 +121,7 @@
         <div class="col-lg-4">
           <h4>My Bunker</h4>
           <p>
-            Some Address 987,<br/> +34 9054 5455, <br/> Madrid, Spain.
+            Some Address 987,<br/> , <br/> Osaka, Japan.
           </p>
         </div>
         <!-- /col-lg-4 -->
@@ -129,7 +129,7 @@
         <div class="col-lg-4">
           <h4>My Links</h4>
           <p>
-            <a href="#">Dribbble</a><br/>
+            <!-- <a href="#">Dribbble</a><br/> -->
             <a href="#">Twitter</a><br/>
             <a href="#">Facebook</a>
           </p>
