revised work again

--- a/about.html
+++ b/about.html
@@ -62,14 +62,14 @@
         <div class="col-lg-8 col-lg-offset-2 centered">
           <img src="img/user.png" alt="Stanley">
           <h1>About Johnny!</h1>
-          <p>ご覧いただきありがとうございます。初めましてITエンジニアのJohnnyです。
+          <p>ご覧いただきありがとうございます。初めましてITエンジニアのJohnnyです。<br/>
 このサイトはエンジニアの僕が自分の手で作成したポートフォリオ作品をまとめています。
-
+<br/>
 名古屋→東京→上海→香港→大阪と各地を転々と、7年間にわたり、IT業界で主にサーバ、
 ネットワークの構築運用業務に携わり、そしてWeb制作のフリーランスをしながら自分のスキルを積み上げていきました。
-
+<br/>
 ＡＩと機械学習及びデータサイエンスが、様々な分野で注目されており、今後その需要が高まると考えます。そこで、Python及び機械学習を学んでおります。
-
+<br/>
 スキルがあれば働く場所や時間にとらわれずに働くことができるのがWeb業界・ITに従事する人たちのメリットだと思います。</p>
 
         </div>
@@ -108,7 +108,7 @@
     </div> -->
     <!-- /row -->
 
-    <div class="row mt">
+    <!-- <div class="row mt"> -->
       <!-- <div class="col-lg-6">
         <h4>THE THINKING</h4>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
@@ -161,7 +161,7 @@
         <div class="col-lg-4">
           <h4>My Bunker</h4>
           <p>
-            Some Address 987,<br/> +34 9054 5455, <br/> Osaka, Japan.
+          Osaka, Japan.
           </p>
         </div>
         <!-- /col-lg-4 -->
