--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Work</a></li>
+          <li><a href="index.html">Top</a></li>
           <li><a href="about.html">About</a></li>
           <!-- <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li> -->
