revised 4 time work again

--- a/about.html
+++ b/about.html
@@ -62,14 +62,14 @@
         <div class="col-lg-8 col-lg-offset-2 centered">
           <img src="img/user.png" alt="Stanley">
           <h1>About Johnny!</h1>
-          <p>ご覧いただきありがとうございます。初めましてITエンジニアのJohnnyです。<br/>
+          <p>ご覧いただきありがとうございます。初めましてITエンジニアのJohnnyです。
 このサイトはエンジニアの僕が自分の手で作成したポートフォリオ作品をまとめています。
-<br/>
-名古屋→東京→上海→香港→大阪と各地を転々と、7年間にわたり、IT業界で主にサーバ、
-ネットワークの構築運用業務に携わり、そしてWeb制作のフリーランスをしながら自分のスキルを積み上げていきました。
-<br/>
+<br/><br/>
+名古屋→東京→上海→香港→大阪と各地を転々としておりました。<br/>
+7年間にわたりIT業界で主にサーバ、ネットワークの構築運用業務に携わり、そしてWeb制作のフリーランスをしながら自分のスキルを積み上げていきました。
+<br/><br/>
 ＡＩと機械学習及びデータサイエンスが、様々な分野で注目されており、今後その需要が高まると考えます。そこで、Python及び機械学習を学んでおります。
-<br/>
+<br/><br/>
 スキルがあれば働く場所や時間にとらわれずに働くことができるのがWeb業界・ITに従事する人たちのメリットだと思います。</p>
 
         </div>
