--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
   <div class="container pt">
     <div class="row mt centered">
       <div class="col-lg-4">
-        <a href="https://johnny-fblog.herokuapp.com"><img class="img-responsive" src="img/portfolio/port01.jpg" alt="" /></a>
+        <a href="https://johnny-fblog.herokuapp.com" target="_blank"><img class="img-responsive" src="img/portfolio/port01.jpg" alt="" /></a>
         <p>マイクロブログ</p>
       </div>
       <div class="col-lg-4">
-        <a href="https://sample-goto.herokuapp.com/"><img class="img-responsive" src="img/portfolio/port02.jpg" alt="" /></a>
+        <a href="https://sample-goto.herokuapp.com/" target="_blank"><img class="img-responsive" src="img/portfolio/port02.jpg" alt="" /></a>
         <p>Webスクレイピング</p>
       </div>
       <div class="col-lg-4">
