1st revised in Mediwork

--- a/about.html
+++ b/about.html
@@ -84,8 +84,8 @@
 
   <!-- +++++ Information Section +++++ -->
 
-  <!-- <div class="container pt">
-    <div class="row mt centered">
+  <div class="container pt">
+    <!-- <div class="row mt centered">
       <div class="col-lg-3">
         <span class="glyphicon glyphicon-book"></span>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -106,9 +106,9 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       </div>
     </div> -->
-    <!-- /row -->
+    <!-- /row-->
 
-    <!-- <div class="row mt"> -->
+    <div class="row mt">
       <!-- <div class="col-lg-6">
         <h4>THE THINKING</h4>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
@@ -116,7 +116,7 @@
       </div> -->
       <!-- /colg-lg-6 -->
 
-      <div class="col-lg-6">
+      <div class="col-lg-10">
         <h4>THE SKILLS</h4>
         Server(Windows, Linux)
         <div class="progress">
@@ -177,8 +177,12 @@
         <!-- /col-lg-4 -->
 
         <div class="col-lg-4">
-          <h4>About Stanley</h4>
-          <p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
+          <h4>About Johnny</h4>
+              <p>Simple is better than complex.</br>
+                Complex is better than complicated.</br>
+                Now is better than never.</br>
+                Although never is often better than *right* now.
+              </p>
         </div>
         <!-- /col-lg-4 -->
       </div>
