--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="col-lg-4">
           <h4>My Bunker</h4>
           <p>
-            Some Address 987,<br/> , <br/> Osaka, Japan.
+            Osaka, Japan.
           </p>
         </div>
         <!-- /col-lg-4 -->
@@ -137,8 +137,12 @@
         <!-- /col-lg-4 -->
 
         <div class="col-lg-4">
-          <h4>About Stanley</h4>
-          <p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
+          <h4>About Johnny</h4>
+          <p>Simple is better than complex.</br>
+            Complex is better than complicated.</br>
+            Now is better than never.</br>
+            Although never is often better than *right* now.
+          </p>
         </div>
         <!-- /col-lg-4 -->
       </div>
