revise index.html add chatbot

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <p>Webスクレイピング</p>
       </div>
       <div class="col-lg-4">
-        <a href="#"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
-        <p>VIKINGS</p>
+        <a href="https://chatai-johnny.herokuapp.com/"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
+        <p>AI-ChatBot</p>
       </div>
     </div>
     <!-- /row -->
