revise 2nd index.html add chatbot

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p>Webスクレイピング</p>
       </div>
       <div class="col-lg-4">
-        <a href="https://chatai-johnny.herokuapp.com/"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
+        <a href="https://chatai-johnny.herokuapp.com/" target="_blank"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
         <p>AI-ChatBot</p>
       </div>
     </div>
